# Samokoder

./: .dockerignore  .env.example  .env.example.fixed  .env.keys  .gitignore  .pre-commit-config.yaml  =0.28.0  =15.0  ACTUAL_REGRESSION_TEST_REPORT.md  ADR-001-module-boundaries-violation.md  ADR-002-configuration-resilience.md  ADR-003-contract-enforcement.md  ADR-AUDIT-001-dependency-reproducibility.md  ADR-AUDIT-002-module-boundary-violation.md  ADR-AUDIT-003-configuration-externalization.md  ADR-AUDIT-004-di-container-lifecycle.md  ADR-AUDIT-005-circuit-breaker-configuration.md  ADR-AUDIT-SUMMARY.md  ADR_ARCHITECTURE_AUDIT_2025.md  API_CHANGELOG.md  API_OWNER_REPORT.md  API_SPECIFICATION_AUDIT_REPORT.md  API_SPECIFICATION_COMPLETION_REPORT.md  API_SYNC_FINAL_REPORT.md  ARCHITECTURAL_FIXES_REPORT.md  ARCHITECTURE_REFACTORING_REPORT.md  ASVS_AUDIT_COMPLETION_REPORT.md  ASVS_AUDIT_EXECUTIVE_SUMMARY.md  ASVS_P0_FIXES_SUMMARY.md  ASVS_SECURITY_AUDIT_DETAILED_REPORT.md  ASVS_SECURITY_AUDIT_REPORT.md  AUDIT_EXECUTION_REPORT.md  AUDIT_REPORT_2025_10_06.md  AUDIT_SUMMARY.md  BRANDBOOK_ALIGNMENT_REPORT.md  BUGFIXES.md  BUG_REPRODUCTION_STEPS.md  CHANGELOG.md  CLIENT_MIGRATION_GUIDE_v1.0.0.md  CODE_CLEANUP_REPORT.md  (+236 more)
.github/: pull_request_template.md
accessibility/: accessibility_verification_report.md  wcag_audit_report.md
alembic/: env.py
api/: API_OWNER_REPORT.md  deprecated_fields.yaml  evolution_plan.md  main.py  main.py.bak  openapi_spec.yaml  ws_ui.py
audit_report_2025-10-06_171008/: REPORT.md  audit_findings.md  context_summary.md  improvement_plan.json
audit_report_2025-10-06_171012/: EXECUTIVE_SUMMARY.md  README.md  REPORT.md  context_summary.md  improvement_plan_autonomous.json
audit_report_2025-10-06_171057/: REPORT.md  context_summary.md  improvement_plan.json
backend/: main.py  main_fixed.py  main_improved.py  main_old.py  main_refactored.py  monitoring.py
chaos/: chaos-monkey.yaml
config/: security_config_backup_556a9921.json  settings.py  settings_fixed.py  test_settings.py
database/: init_data.sql  schema.sql
devops/: DEVOPS_SRE_REPORT.md  disaster-recovery-plan.md  release_plan.md  (+3 more)
(+873 files in other folders)
